[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
name = "recon-actix"
version = "0.1.0"
[dependencies]
actix = "0.7.5"
actix-web = "0.7.13"
bytes = "0.4.10"
env_logger = "0.5.13"
failure = "*"
futures = "0.1.25"
log = "0.4.6"
rand = "0.5.5"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.10"
tokio-retry = "0.2"
tokio-tcp = "0.1.2"
tokio-timer = "0.2.7"
uuid = "0.7.1"

[dependencies.snowflake]
features = ["serde_support"]
version = "1.2"
