[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
name = "recon-actix"
version = "0.1.0"
[dependencies]
actix = "0.8.3"
actix-web = "0.7.19"
bytes = "0.4.12"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.27"
log = "0.4.6"
rand = "0.5.5"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-retry = "0.2.0"
tokio-tcp = "0.1.3"
tokio-timer = "0.2.11"
uuid = "0.7.4"

[dependencies.snowflake]
features = ["serde_support"]
version = "1.3.0"
