[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
name = "recon-link"
version = "0.3.1-alpha.0"
license = "Apache-2.0"
description = "Persistent tcp connections"
repository = "https://github.com/cmsd2/recon"
keywords = ["reconnect", "async", "tokio", "futures", "tcp"]
categories = ["asynchronous", "network-programming"]

[dependencies]
bytes = "0.4.5"
futures = "0.1.17"
log = "0.4.1"
state_machine_future = "0.1.5"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
tokio-retry = "0.1.1"
tokio-timer = "0.1.2"
uuid = { version = "0.5", features = ["v4"] }
error-chain = "0.11.0"

[dependencies.env_logger]
optional = true
version = "0.4.3"

[dependencies.recon-util]
version = "0.1.0"
path = "../recon-util"

[features]
logger = ["env_logger"]
