[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
categories = [
    "asynchronous",
    "network-programming",
]
description = "Persistent tcp connections"
keywords = [
    "reconnect",
    "async",
    "tokio",
    "futures",
    "tcp",
]
license = "Apache-2.0"
name = "recon-link"
repository = "https://github.com/cmsd2/recon"
version = "0.3.1-alpha.0"

[dependencies]
bytes = "0.4.12"
error-chain = "0.12.1"
futures = "0.1.27"
log = "0.4.6"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
state_machine_future = "0.2.0"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-retry = "0.2.0"
tokio-timer = "0.2.11"

[dependencies.env_logger]
optional = true
version = "0.6.1"

[dependencies.recon-util]
path = "../recon-util"
version = "0.1.0"

[dependencies.uuid]
features = ["v4"]
version = "0.7.4"

[features]
logger = ["env_logger"]
