[package]
name = "recon-util"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[dependencies]
futures = "0.1.27"
log = "0.4.6"
uuid = { version = "0.7.4", features = ["v4"] }
error-chain = "0.12.1"

[dependencies.env_logger]
optional = true
version = "0.6.1"

[dev-dependencies]
tokio-core = "0.1.17"

[features]
logger = ["env_logger"]
