[package]
authors = ["Chris Dawes <cmsd2@cantab.net>"]
name = "recon"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
bytes = "0.4.5"
chrono = "0.4.0"
futures = "0.1.17"
futures-cpupool = "0.1.7"
futures-mpsc = "0.1.1"
log = "0.3.8"
quick-error = "1.2.1"
rand = "0.3.18"
rustc-serialize = "0.3.24"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
tokio-core = "0.1.10"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
tokio-retry = "0.1.1"
tokio-service = "0.1.0"
tokio-timer = "0.1.2"

[dependencies.bytes-more]
git = "https://github.com/carllerche/bytes-more"

[dependencies.tokio-serde-json]
git = "https://github.com/carllerche/tokio-serde-json"

[dev-dependencies]
slog = "2.0.12"
slog-envlogger = "2.0.0"
slog-stdlog = "3.0.2"
slog-term = "2.3.0"

[features]
